--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -314,12 +314,7 @@
                 {% endif %}
               </form>
               <div class="shortcut-login">
-                <span>Or connect with</span>
-                <div class="buttons">
-                  <a href="#" class="facebook"><i class="fab fa-facebook-f"></i>Facebook</a>
-                  <a href="#" class="google"><i class="fab fa-google"></i>Google</a>
-                </div>
-                <p>Already have an account? <a href="login.html">Login</a></p>
+                <p>Already have an account? <a href="/login">Login</a></p>
               </div>
             </div>
           </div>
