--- a/web/templates/dashboard-manage-company.html
+++ b/web/templates/dashboard-manage-company.html
@@ -143,15 +143,15 @@
               <div class="dashboard-content-wrapper">
                 <div class="manage-candidate-container">
                   <br>
-                  {% if job %}
-                      <h6>Applications for {{job.title}} [{{job.id}}] at {{job.company.name}}</h6>
-                  {% endif %}
+                  <input type="submit" value="Sort Chronologically">
+                  <input type="submit" value="Sort Alphabetically">
+                  <input type="submit" value="Approved Only">
+                  <input type="submit" value="Not Approved Only">
                   <table class="table">
                     <thead>
                       <tr>
                         <th>Company Name</th>
                         <th>Status</th>
-                        <th class="action">Action</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -177,18 +177,6 @@
                         {% endif %}
                     </tbody>
                   </table>
-                  <div class="pagination-list text-center">
-                    <nav class="navigation pagination">
-                      <div class="nav-links">
-                        <a class="prev page-numbers" href="#"><i class="fas fa-angle-left"></i></a>
-                        <a class="page-numbers" href="#">1</a>
-                        <span aria-current="page" class="page-numbers current">2</span>
-                        <a class="page-numbers" href="#">3</a>
-                        <a class="page-numbers" href="#">4</a>
-                        <a class="next page-numbers" href="#"><i class="fas fa-angle-right"></i></a>
-                      </div>
-                    </nav>                
-                  </div>
                 </div>
               </div>
               <div class="dashboard-sidebar">
