Added regex search link

--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -139,6 +139,7 @@
                       <div class="form-header">
                         <h5><i data-feather="edit"></i>Please tell us more about your company</h5>
                       </div>
+                      <h5>Our staff will review your information within 1-3 business days</h5>
                       <div class="form-group">
                         {{form.companyName}}
                       </div>
