--- a/web/templates/home-4.html
+++ b/web/templates/home-4.html
@@ -69,7 +69,7 @@
               <div class="banner-search">
                 <form action="/search/" class="search-form" method="POST">
                   {% csrf_token %}
-                  <input type="text" placeholder="Enter Keywords" id="keyword" name="keyword">
+                  <input type="text" placeholder="Enter Keywords (Optional)" id="keyword" name="keyword">
                   <button class="button2" type="submit"><i class="fas fa-search"></i>Search Job</button>
                 </form>
                 <div class="trending-key" style="text-align: center;">
