--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -50,7 +50,7 @@
           <div class="col">
             <div class="header-top">
               <div class="logo-area">
-                <a href="index.html"><img src="images/logo-2.png" alt=""></a>
+                <a href="/"><img src={% static "images/concordia-logo.png" %} alt=""></a>
               </div>
               <div class="top-nav">
                 <a href="/register" class="account-page-link">Register</a>
