Added bug fix for secondary email confirmation

--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -263,12 +263,12 @@
                       {{form.program}}
                       <br>
                       <br>
+                      <label>Confirm that you are a Concordia student: Enter a valid Concordia Email and we will send you a confirmation link. (This is optional and you may do this at a later time through the 'Edit Profile' menu.) </label>
+                      {{form.concordia_email}}
+                      <br>
+                      <br>
                       <label>Please upload PDF of your unofficial transcript</label>
                       {{form.transcript}}
-                      <br>
-                      <br>
-                      <label>Confirm that you are a Concordia student: Enter a valid Concordia Email and we will send you a confirmation link. (This is optional and you may do this at a later time through the 'Edit Profile' menu) </label>
-                      {{form.concordia_email}}
                       <br>
                       <br>
                       <br>                        
