--- a/web/templates/404.html
+++ b/web/templates/404.html
@@ -36,8 +36,8 @@
 
 
     <!--[if lt IE 9]>
-    <script src="assets/js/html5shiv.min.js"></script>
-    <script src="assets/js/respond.min.js"></script>
+    <script src={% static "assets/js/html5shiv.min.js" %}></script>
+    <script src={% static "assets/js/respond.min.js" %}></script>
     <![endif]-->
 
   </head>
@@ -105,7 +105,7 @@
           <div class="col">
             <div class="section-padding-150 error-page-wrap text-center white-bg">
               <div class="icon">
-                <img src="images/error.png" class="img-fluid" alt="">
+                <img src={% static "images/error.png" %} lass="img-fluid" alt="">
               </div>
               <h1>404</h1>
               <p>You can't access this page.</p>
