--- a/web/templates/job-details.html
+++ b/web/templates/job-details.html
@@ -197,7 +197,7 @@
                         <ul>
                           <li><span>Published on:</span> {{object.created_at}}</li>
                           <li><span>Vacancy:</span>{{object.vacancy}}</li>
-                          <li><span>Experience:</span> {{object.jobtype}}</li>
+                          <li><span>Categories:</span> {{object.category}}</li>
                           <li><span>Job Location:</span> {{object.location}}</li>
                           <li><span>Salary:</span> {{object.salaryRange}}</li>
                           <li><span>Application Deadline:</span> {{object.expirationDate}}</li>
