--- a/web/templates/job-listing.html
+++ b/web/templates/job-listing.html
@@ -182,7 +182,7 @@
                       </div>
                       <div class="more">
                         <div class="buttons">
-                          <a href="add-resume/{{job.pk}}/" class="button">Apply Now</a>
+                          <a href="/add-resume/{{job.pk}}/" class="button">Apply Now</a>
                           <a href="#" class="favourite"><i data-feather="heart"></i></a>
                         </div>
                         <p class="deadline">Deadline: {{job.expirationDate}}</p>
